# wybl

./: CMakeLists.txt  DEPENDENCIES  LICENSE  README.md  main.cpp
.github/workflows/: tag.yaml  version.yaml
example/: configuration.yaml  first_example.yaml  second_example.yaml
example/additional_widgets/: example_image.yaml  example_text.yaml
example/static_files/: stylesheet.css
example/static_files/modules/: additional_module.js
include/: dependencies.hpp  generation.hpp  guis.hpp  structure.hpp
js/: CMakeLists.txt  build.js  package.json  rollup.config.js  tsconfig.json  webpack.config.js
js/ts/: coreWidgets.ts  exported.ts  gui.ts  index.ts  splash.scss  structure.ts
js/ts/modals/: alert.ts  confirm.ts  dialog.ts
js/ts/resources/: module.ts  resource.ts  stylesheet.ts
js/ts/widgets/: audio.ts  banner.ts  container.ts  image.ts  layout.ts  tabs.ts  text.ts  textual.ts  video.ts  void.ts  widget.ts
src/: dependencies.cpp  generation.cpp  generation.hpp  guis.cpp  structure.cpp
